fix double scroll

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,7 +69,9 @@ ul {
 .navigation {
   grid-area: menu;
   max-height: calc(100vh - var(--height-top-bar));
-  position: relative;
+  /* position: relative; */
+  position: sticky;
+  top: var(--height-top-bar);
 }
 @media (min-width: 1024px) {
   .navigation {
@@ -296,33 +298,40 @@ ul {
 }
 
 .top-bar__container__right .navigation__item__icon {
-  width: 1.75rem;
+  width: 1.5rem;
+}
+@media (min-width: 1024px) {
+  .top-bar__container__right .navigation__item__icon {
+    width: 1.75rem;
+  }
 }
 
 .top__bar__notification {
   position: relative;
 }
 
-.top__bar__notification span {
+.notification__count {
+  --size : 0.75rem;
   position: absolute;
   top: -0.25rem;
-  right: -4px;
-  padding: 0.2rem;
-  min-width: 1.2rem;
-  min-height: 1.2rem;
-  border-radius: 100%;
+  right: 0px;
+  min-width: var(--size);
+  min-height: var(--size);
+  border-radius: 50%;
   background-color: var(--yt-spec-red);
   color: var(--yt-spec-white-1);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 8px;
 }
+
 @media screen and (min-width: 1024px) {
-  .top__bar__notification span {
+  .notification__count {
+    --size : 1.2rem;
     right: 12px;
+    font-size: 12px;
   }
-  
 }
 
 /* ::::::::::::::::::::  END TOP BAR :::::::::::::::::::::: */
@@ -333,10 +342,11 @@ ul {
 
 .container-videos {
   grid-area: container-videos;
-  position: relative;
-  top: var(--height-top-bar);
+  /* position: relative;
+  top: var(--height-top-bar); */
+  padding-top: var(--height-top-bar);
   margin: 0 0.75rem;
-  max-height: calc(100vh - var(--height-top-bar));
+  /* max-height: calc(100vh - var(--height-top-bar)); */
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -533,6 +543,7 @@ video__item__info__container {
 .footer__createBy{
   display: flex;
   flex-direction: column;
+  text-align: center;
   align-items: center;
   gap: 0.5rem;
 }
